// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Models Schema schemaDefinition should resolve field with conditional operators 1`] = `
Object {
  "allOf": undefined,
  "default": undefined,
  "items": Object {
    "allOf": undefined,
    "format": "url",
    "title": undefined,
    "type": "string",
    "x-circular-ref": undefined,
    "x-parentRefs": Array [],
  },
  "maxItems": 20,
  "minItems": 1,
  "title": "isString",
  "type": "string",
  "x-circular-ref": undefined,
  "x-displayName": "isString",
  "x-parentRefs": Array [],
}
`;

exports[`Models Schema schemaDefinition should resolve field with conditional operators 2`] = `
Object {
  "allOf": undefined,
  "default": undefined,
  "items": Object {
    "allOf": undefined,
    "format": "url",
    "title": undefined,
    "type": "string",
    "x-circular-ref": undefined,
    "x-parentRefs": Array [],
  },
  "maxItems": 10,
  "minItems": 1,
  "pattern": "\\\\d+",
  "title": "notString",
  "type": Array [
    "string",
    "integer",
    "null",
  ],
  "x-circular-ref": undefined,
  "x-displayName": "notString",
  "x-parentRefs": Array [],
}
`;

exports[`Models Schema schemaDefinition should resolve schema with conditional operators 1`] = `
Object {
  "allOf": undefined,
  "maxItems": 2,
  "properties": Object {
    "test": Object {
      "allOf": undefined,
      "description": "The list of URL to a cute photos featuring pet",
      "enum": Array [
        10,
      ],
      "items": Object {
        "allOf": undefined,
        "format": "url",
        "title": undefined,
        "type": "string",
        "x-circular-ref": undefined,
        "x-parentRefs": Array [],
      },
      "maxItems": 20,
      "minItems": 1,
      "title": undefined,
      "type": Array [
        "string",
        "integer",
        "null",
      ],
      "x-circular-ref": undefined,
      "x-parentRefs": Array [],
      "x-refsStack": Array [
        "/oneOf/0",
      ],
    },
  },
  "title": "=== 10",
  "type": "object",
  "x-circular-ref": undefined,
  "x-parentRefs": Array [],
}
`;

exports[`Models Schema schemaDefinition should resolve schema with conditional operators 2`] = `
Object {
  "allOf": undefined,
  "maxItems": 20,
  "properties": Object {
    "test": Object {
      "description": "The list of URL to a cute photos featuring pet",
      "items": Object {
        "format": "url",
        "type": "string",
      },
      "maxItems": 20,
      "minItems": 1,
      "type": Array [
        "string",
        "integer",
        "null",
      ],
      "x-refsStack": Array [
        "/oneOf/1",
      ],
    },
  },
  "title": "case 2",
  "type": "object",
  "x-circular-ref": undefined,
  "x-parentRefs": Array [],
}
`;
